# dr-app

./: .clang-format  CMakeLists.txt  README.md  emsc-init.ps1  emsc-init.sh
.github/workflows/: build.yml
cmake/: app-utils.cmake
example/: CMakeLists.txt
example/hello-dr/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp
example/hello-dr/web/: index.html
example/hello-tetra/: CMakeLists.txt  main.cpp  scene.cpp  shader_src.hpp
example/hello-tetra/web/: index.html
example/hello-tetrahedron/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp
example/hello-triangle/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp
example/imgui-demo/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp
example/imgui-demo/web/: index.html
include/dr/app/: app.hpp  app_config.h  asset_cache.hpp  asset_table.hpp  camera.hpp  camera_controls.hpp  camera_rig.hpp  camera_utils.hpp  debug_draw.hpp  draw_command.hpp  event_handlers.hpp  file_utils.hpp  gfx.hpp  gfx_resource.hpp  gfx_utils.hpp  input_utils.hpp  orbit_camera.hpp  task.hpp  task_queue.hpp  task_ref.hpp  thread_pool.hpp  utils.hpp
include/dr/app/shim/: imgui.hpp
src/: app.c  app.cpp  app.h  app_config.c  camera.cpp  camera_controls.cpp  camera_rig.cpp  camera_utils.cpp  debug_draw.cpp  default_scene.cpp  default_scene.hpp  draw_command.cpp  event_handlers.cpp  file_utils.cpp  gfx.cpp  gfx_resource.cpp  gfx_utils.cpp  input_utils.cpp  orbit_camera.cpp  task.cpp  task_queue.cpp  thread_pool.cpp  utils.cpp
src/shim/: imgui.cpp  sokol.cpp  sokol.mm
test/: CMakeLists.txt  task_queue_tests.cpp
